style.css
/*
Theme Name: SoloFolio
Theme URI: http://www.solofolio.net/
Description: A portfolio platform for creatives.
Version: 4.0 Testing
Author: Joel Hawksley
Author URI: http://www.joelhawksley.com/

PLEASE PLEASE PLEASE Read the README file and follow all the directions in their entirety.

In plain english:

1. SoloFolio can be used for both personal and commercial projects.

2. You can NOT publish, redistribute, or otherwise disseminate any component of SoloFolio, including the gallery components used in the theme.

3. Attribution is appreciated, but not required. You can toggle this setting under SoloFolio > General.
 
Now for the legalese:

THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL SOLFOLIO BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

*/

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
	font-family: Helvetica, Verdana, Arial, Utkal, sans-serif;
	background-color: #222222;
	color: #000000;
	-webkit-text-size-adjust: 100%;
	font-size: 12px;
	margin: 0;
	padding: 0;
    text-align: left;
}

/* Options - Fonts */
.sans {
	font-family: Helvetica,Verdana,Arial,Utkal,sans-serif;
}

.serif {
	font-family: georgia,"times new roman",times,serif;
}

/* Floats */
.left {
	float: left;
}
	
.alignleft {
	margin-right: 10px;
}

.alignright {
	margin-left: 10px;
}
	
.right {
	float: right;
}
	
.clear {
	clear: both;
	height: 0;
	margin: 0 !important;
	padding: 0;
}

/* Links */
a:link, a:visited {
	font-weight: bold;
	text-decoration: none;
	outline: none !important;
}

a:hover, a:active { 
	text-decoration: none;
	outline: none !important;
}

a img { 
	margin: 0;
	padding: 0;
	border: none;
	text-decoration: none; 	
}

	a:hover img { 
		text-decoration: none; 
	}

h3 a:link {
	text-decoration: none;
}

h3 a:visited {
	text-decoration: none;
}

h3 a:hover, a:active {
}

/* Typography */
h1, h2, h3, h4, h5, h6 {
	font-weight: normal;
	margin: 10px 0 0 0;
	padding: 0;
}

h1 {
	font-size: 36px;
}

h2 {
	font-size: 28px;
	margin: 0 0 10px 0;
	padding: 0 0 3px 0; 
}
	.post-title h2 {
		font-weight: bold;
		margin-bottom: 5px;
	}

h3 {
	font-size: 18px;
	margin: 5px 0 0;
	padding: 0;
}

h4 {
	font-size: 16px;
}

h5 {
	font-size: 14px;
}

h6 { 
	font-size: 12px;
}	
	#comments h6 {
		font-weight: bold;
	}

p {
	line-height: 1.5em;
	margin: 0 0 1em;
	padding: 0;
}

/* Structure */
#header {
	position: fixed;
	width: 250px;
	padding: 20px 0 0 20px;
	}
	
	#header a img {
		border: none;
		font-weight: normal;
		text-decoration: none;
	}
		
		#header a:hover {
			border: none;
		}
	
	
	#logo {
	}
	
		#logo h1 {
			font-size: 24px;
			}
		
		#logo img {
			border: none;
		}
		
		#logo #logo-noimg {
			margin: 0;
		}
		
	#header-content {
	}
		
		#header-phone, #header-email {
			margin-right: 0px;
		}
		
		#header-nav {
			margin-top: 5px;
		}

#wrapper {
	margin: 0 0 0 270px;
	padding: 20px 10px 0 0;
	max-width: 900px;
}

#content-page {
	margin: 0 auto;
}

#content-index {
	float: left;
}

#content-single {
	float: left;
	text-align: left;
}
	
#content-page-sidebar {
	float: left;
}

#content-search {
	float: left;
}

.commentbox {
	font-size: 11px;
	margin-bottom: 10px;
	padding: 2px 5px 2px 5px;
}

#comments {
	padding: 0px;
}

#comments .comment {
	padding: 10px;
}
	
#comments .comment cite {
	font-size: 14px;
	font-style: normal;
	font-weight: bold;
}
	
/* Footer */

#footer	{
	font-size: 10px;
	margin: 0 auto;
	padding: 10px 0;
}

	#footer p {
		margin: 0;
	}
		
	#footer-nav {
		font-size: 1.2em;
	}

	#footer ul {
		margin: 5px 0 1em 0;
		padding: 0;
	}
	
		#header-nav ul li, #footer ul li {
			display: inline;
		}
			
		#footer ul li a {
			text-decoration: none;
		}

/* Header */

#header h1 {
	font-weight: bold;
	margin: 0;
	padding: 0;
}
	
	#header h1 a:link,
	#header h1 a:visited {
		background-color: transparent;
	}
	
	#header h1 a:hover,
	#header h1 a:active {
		background-color: transparent;
	}

	.description {
		display: inline;
	}
	
	h1.blog-title {
		display: inline;
	}
	
	h1.blog-title a {	
		font-size: 36px;
		border-bottom: none;
	}
	
	h1.blog-title a:hover {
		text-decoration: none;
		background: transparent;
	}
	
	.tagline {	
		font-weight: normal;
		font-size: 18px;
		text-align: right;
		margin-left: 3px;
		padding: 0;
		display: inline;
	}

/* Blog Posts */
.entry {
	border-bottom: 1px dotted #424242;
	margin: 0 0 20px;
	overflow: hidden;
}
	
.post-meta {
	margin: 0 0 .7em;
}

.meta-cat {
	margin: 0 0 0 1em;
}

.post-cat {
	text-transform: uppercase;
}

.date, .post-cat, .meta-cat {	
	color: #ccc;
	font-size: 10px;
	padding: 0;
}

h2.post-title {
	font-weight: normal;
	margin: 0;
	padding: 0;
}

h2.post-title a {
	border-bottom: none;
	font-size: 24px;
}

	h2.post-title a:hover {
		text-decoration: none;
	}

/* Sidebar */

#sidebar {
	float: right;
	min-width: 100px;
	width: 175px;
}

/* Comments */
.commentlist {
	padding: 0;
}

.commentlist li {
	list-style: none;
	margin: 0 0 1em 0;
	padding: 0;
}

.commentlist p {
	margin: 10px 5px 10px 0;
}

#commentform p {
	margin: 5px 0;
}

.nocomments {
	margin: 0;
	padding: 0;
	text-align: center;
}

.commentmetadata {
	display: block;
	margin: 0;
}

.commentlist li {
	padding-bottom: 10px;	
}
	
#commentform input, #commentform textarea {
	font-family: Helvetica,Verdana,Arial,Utkal,sans-serif;
	padding: 3px;
	font-size: 11px;
}

#commentform textarea {
	width: 500px;
}


.commentlist p {
	font-weight: normal;
	line-height: 1.5em;
	text-transform: none;
}

#commentform p {
}

.commentmetadata {
	font-weight: normal;
}
	
/* Images */
.aligncenter,
div.aligncenter {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.alignleft {
	float: left;
}

.alignright {
	float: right;
}

.wp-caption {
	text-align: left;
	margin: 0 0 5px 0;
}

.wp-caption img {
	margin: 0;
	padding: 0;
}

.wp-caption-text {
	font-family: arial,helvetica,sans-serif;
	margin: 3px 2px;
	font-size: 10px;
	padding-bottom: 5px;
}
}

/* Forms */
#searchform {
	margin: 0 0 1em;
}

#searchform input {
	height: 14px;
	padding: 3px;
}

/* Photoshelter styles - to be loaded remotely */

ul.thumbs {
	width: auto;
}

.gallery_thumbs .gallery_thumbs a {
	display: none;
}

ul.thumbs.gallery_thumbs li {
	height: 160px !important;
}

UL.thumbs LI {
	width: 160px;
	height: 160px;
}

UL.thumbs LI TABLE TD {
	width: 150px;
}

UL.thumbs LI TABLE TD.slide {
	width: 150px;
	height: 150px;
}

#feature_galleries li {
	list-style-type: none;
	padding-bottom: 10px;
}

#feature_galleries li img {
	margin-bottom: 3px;
}

ul.my_recent_galleries li {
	list-style-type: none;
	padding-bottom: 5px;
}

.actionbarLeft {
	display: block;
	float: left;
}

.actionbarRight {
	display: block;
	float: right;
}

.addthis_toolbox {
    display: inline;
}

/* Social Media Widget */

#solofolio-social {
    height: 24px;
    position: relative;
}

#solofolio-social li {
    margin: 0; 
    padding: 0; 
    list-style: none;
    float: left;
}

#solofolio-social li, #solofolio-social a {
    height: 24px; 
    width: 24px; 
    margin-right: 5px;
    display: block;
}

#solofolio-twitter {
	background: url("img/twitter.png") no-repeat;
}

#solofolio-facebook {
	background: url("img/facebook.png") no-repeat;
}

#solofolio-vimeo {
	background: url("img/vimeo.png") no-repeat;
}

#solofolio-linkedin {
	background: url("img/linkedin.png") no-repeat;
}

#solofolio-rss {
	background: url("img/rss.png") no-repeat;
}

#solofolio-twitter, #solofolio-facebook, #solofolio-vimeo, #solofolio-linkedin, #solofolio-rss {
	background-position: 0 -24px;
}

#solofolio-twitter:hover, #solofolio-facebook:hover, #solofolio-vimeo:hover, #solofolio-linkedin:hover, #solofolio-rss:hover {
	background-position: 0 0;
}

.sl-sidescroll-container {
  margin: 0 20px 0 0;
  position: relative;
}

	/* Make sidescroll images retina-friendly! */
	.sl-sidescroll-container img {
		width: 100%;
		height: auto;
	}


/* Disable Admin Bar - More trouble than it's worth */

#wpadminbar {
display: none !important;
}

/* menu icon */
#menu-icon {
	color: #000;
	width: 50px;
	height: 40px;
	background: url("img/menu.png") center center no-repeat;
	text-indent: -999999px;
	border: 0;
	padding: 0;
	position: absolute;
	right: 10px;
	top: 5px;
	cursor: pointer;
	display: none;
}

/* React Gallery css */
.sl-react img {
	max-width:100%;
}

